# phishing_detector_HF

./: README.md  pyproject.toml
phishing_detector/src/: config.py
phishing_detector/src/vector_db/: faiss_store.py  metadata.json
src/: main.py
src/classifier/: detector.py
src/data/: scenarios.json
src/embeddings/: embedder.py
src/vector_db/: faiss.index
