[project]
name = "phishing-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel-Wiech",email = "daniel.wiech1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.24.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "faiss-cpu (>=1.14.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "phishing_detector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
